--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 
 # Use ctrl-space instead of ctrl-b
 unbind C-b
-set -g prefix C-Space
+set -g prefix C-a
 bind Space send-prefix
 
 # use | and - for splits
@@ -12,3 +12,5 @@ bind - split-window -v
 
 # enable mouse mode
 set -g mouse on
+
+set-window-option -g mode-keys vi
