--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,4 +13,28 @@ bind - split-window -v
 # enable mouse mode
 set -g mouse on
 
+
+bind r source-file ~/.tmux.conf
+
+# Vi bindings below for mode keys, switching, and resizing windows.
 set-window-option -g mode-keys vi
+
+unbind-key j
+bind-key j select-pane -D
+unbind-key k
+bind-key k select-pane -U
+unbind-key h
+bind-key h select-pane -L
+unbind-key l
+bind-key l select-pane -R
+
+bind -n M-k resize-pane -U
+bind -n M-j resize-pane -D
+bind -n M-h resize-pane -L
+bind -n M-l resize-pane -R
+
+# enable pbcopy / pbpaste (macos only)
+if-shell \
+    'test "$(uname -s)" = Darwin && type reattach-to-user-namespace > /dev/null' \
+    'set-option -g default-command "exec reattach-to-user-namespace -l zsh"'
+
