some additional nvim plugins

--- a/.vale.ini
+++ b/.vale.ini
@@ -1,7 +1,7 @@
 StylesPath = styles
 MinAlertLevel = suggestion
 
-Packages = Google, Readability, alex, proselint
+Packages = alex, proselint
 
 [*.{md,txt}]
 BasedOnStyles = alex, proselint
