more nvim changes

--- a/.vale.ini
+++ b/.vale.ini
@@ -1,7 +1,7 @@
 StylesPath = styles
 MinAlertLevel = suggestion
 
-Packages = alex, proselint
+Packages = proselint, write-good
 
 [*.{md,txt}]
-BasedOnStyles = alex, proselint
+BasedOnStyles = proselint, write-good
