remove write-good from vale config

--- a/.vale.ini
+++ b/.vale.ini
@@ -1,7 +1,7 @@
 StylesPath = styles
 MinAlertLevel = suggestion
 
-Packages = proselint, write-good
+Packages = proselint
 
 [*.{md,txt}]
-BasedOnStyles = proselint, write-good
+BasedOnStyles = proselint
