minor fixes to neovim ansible and fish prompt

--- a/.stringy/ansible/neovim.yml
+++ b/.stringy/ansible/neovim.yml
@@ -14,7 +14,7 @@
 - name: Install
   synchronize:
     src: /tmp/neovim-linux64/{{ item }}/
-    dest: /{{ item }}/
+    dest: /usr/{{ item }}/
   loop:
     - bin
     - share
