--- a/.stringy/ansible/neovim.yml
+++ b/.stringy/ansible/neovim.yml
@@ -13,7 +13,7 @@
 
 - name: Install
   synchronize:
-    src: /tmp/neovim-linux64/{{ item }}/
+    src: /tmp/nvim-linux64/{{ item }}/
     dest: /usr/{{ item }}/
   loop:
     - bin
