--- a/.stringy/ansible/redhat.yml
+++ b/.stringy/ansible/redhat.yml
@@ -10,4 +10,5 @@
       - kernel-devel
       - cmake
       - clang
+      - https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_distribution_major_version }}.noarch.rpm
     state: latest
