--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,3 +37,7 @@ if-shell \
     'test "$(uname -s)" = Darwin && type reattach-to-user-namespace > /dev/null' \
     'set-option -g default-command "exec reattach-to-user-namespace -l zsh"'
 
+set -ga terminal-features "*:hyperlinks"
+
+# disable escape delay (messes up vim when going to normal mode)
+set -s escape-time 0
