git modifications, tmux modifications, and new wezterm config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,3 +41,7 @@ set -ga terminal-features "*:hyperlinks"
 
 # disable escape delay (messes up vim when going to normal mode)
 set -s escape-time 0
+
+# 1-index windows
+set -g base-index 1
+set -g pane-base-index 1
