--- a/.stringy/ansible/redhat.yml
+++ b/.stringy/ansible/redhat.yml
@@ -10,5 +10,7 @@
       - kernel-devel
       - cmake
       - clang
+      - flatpak
+      - gcc
       # - https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_distribution_major_version }}.noarch.rpm
     state: latest
