--- a/.stringy/ansible/flatpak.yml
+++ b/.stringy/ansible/flatpak.yml
@@ -1,5 +1,11 @@
 ---
 
+- name: Add flathub
+  community.general.flatpak_remote:
+    name: flathub
+    method: user
+    flatpakrepo_url: flathub https://flathub.org/repo/flathub.flatpakrepo
+
 - name: Install flatpaks
   community.general.flatpak:
     method: user
