Some more fixes following real use of installation scripts

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,3 +45,5 @@ set -s escape-time 0
 # 1-index windows
 set -g base-index 1
 set -g pane-base-index 1
+
+set-option -g default-shell /usr/bin/fish
