Makes sway work better maybe, idk, its good enough for now.

--- a/.config/stringy/ansible/provision/redhat.yml
+++ b/.config/stringy/ansible/provision/redhat.yml
@@ -17,6 +17,10 @@
       - containerd.io
       - docker-buildx-plugin
       - docker-compose-plugin
+      - sway
+      - pavucontrol
+      - blueman
+      - rofi
     state: latest
 
 - name: Add authorized key
