--- a/.config/sway/config
+++ b/.config/sway/config
@@ -18,6 +18,7 @@ font pango:monospace 8
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
+output * bg /home/ghutton/.config/sway/background.jpg fill
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -62,7 +63,7 @@ bindsym $mod+d exec --no-startup-id "rofi -modi drun,run -show drun"
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
-bindsym $mod+x exec --no-startup-id /home/ghutton/.config/stringy/scripts/lock
+bindsym $mod+x exec --no-startup-id wlogout
 
 # change focus
 bindsym $mod+j focus left
@@ -195,10 +196,5 @@ bindsym $mod+r mode "resize"
 bar swaybar_command waybar
 
 exec way-displays > /tmp/way-displays.${XDG_VTNR}.${USER}.log 2>&1
-
-exec swayidle -w \
-    timeout 1800 '/home/ghutton/.config/stringy/scripts/lock' \
-    timeout 1805 'swaymsg "output * power off"' \
-    resume 'swaymsg "output * power on"'
 
 focus output HDMI-A-1
