Additions to waybar mostly, cpu, networking, clock/calendar

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -198,3 +198,5 @@ bar swaybar_command waybar
 exec way-displays > /tmp/way-displays.${XDG_VTNR}.${USER}.log 2>&1
 
 focus output HDMI-A-1
+
+mouse_warping none
