--- a/.config/sway/config
+++ b/.config/sway/config
@@ -214,3 +214,5 @@ exec mako
 
 bindsym --whole-window BTN_TASK seat seat0 cursor press BTN_MIDDLE
 bindsym --release --whole-window BTN_TASK seat seat0 cursor release BTN_MIDDLE
+
+bindsym $mod+Shift+s exec systemctl suspend
