--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,3 +47,13 @@ set -g base-index 1
 set -g pane-base-index 1
 
 set-option -g default-shell /usr/bin/fish
+
+# Toggle popup window with Alt-p
+bind-key -n -N 'Toggle popup window' M-p if-shell -F '#{==:#{session_name},popup}' {
+    detach-client
+} {
+    display-popup -d "#{pane_current_path}" -xC -yC -w 80% -h 75% -E 'tmux attach-session -t popup || tmux new-session -s popup'
+}
+
+set -s set-clipboard off
+set -s copy-command wl-copy
